@@ -1,3 +1,4 @@
 .precomp/
 /App-Browser-*
 /releases/
+*.rakucov
