@@ -18,6 +18,7 @@
   ],
   "source-url": "https://github.com/lizmat/App-Browser.git",
   "tags": [
+    "BROWSER"
   ],
   "test-depends": [
   ],
