@@ -1,4 +1,4 @@
-[![Actions Status](https://github.com/lizmat/App-Browser/workflows/test/badge.svg)](https://github.com/lizmat/App-Browser/actions)
+[![Actions Status](https://github.com/lizmat/App-Browser/actions/workflows/linux.yml/badge.svg)](https://github.com/lizmat/App-Browser/actions) [![Actions Status](https://github.com/lizmat/App-Browser/actions/workflows/macos.yml/badge.svg)](https://github.com/lizmat/App-Browser/actions) [![Actions Status](https://github.com/lizmat/App-Browser/actions/workflows/windows.yml/badge.svg)](https://github.com/lizmat/App-Browser/actions)
 
 NAME
 ====
@@ -48,7 +48,7 @@ If you like this module, or what I’m doing more generally, committing to a [sm
 COPYRIGHT AND LICENSE
 =====================
 
-Copyright 2021 - 2024 Elizabeth Mattijsen
+Copyright 2021 - 2025 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
